--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,138 @@
 <ion-header>
+
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      แบบบันทึกการนับจด สน.1
     </ion-title>
   </ion-navbar>
-</ion-header>
+  <ion-toolbar no-border-top>
+      <ion-segment [(ngModel)]="sn1">
+        <ion-segment-button value="page1">
+          หน้าที่ 1
+        </ion-segment-button>
+        <ion-segment-button value="page2">
+          หน้าที่ 2
+        </ion-segment-button>
+        <ion-segment-button value="page3">
+          หน้าที่ 3 
+        </ion-segment-button>
+      </ion-segment>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+    <div [ngSwitch]="sn1">
+      <ion-list *ngSwitchCase="'page1'">
+        <ion-item>
+          <h2>ชื่อถนน ลำน้ำหรือละแวกบ้าน</h2>
+        </ion-item>
+        <ion-item>
+            <input>
+        </ion-item>
+        <ion-item>
+          <h2>ชื่อตรอก/ซอย</h2>
+        </ion-item>
+        <ion-item>
+            <input>
+        </ion-item>
+        <ion-item>
+          <h2>ชื่อหมู่บ้าน/คอนโด/อาคาร/สำนักงาน/สถานประกอบการ/สถาบัน ฯลฯ</h2>
+        </ion-item>
+        <ion-item>
+            <input>
+        </ion-item>
+        <ion-item>
+          <h2>เลขที่บ้าน/อาคาร</h2>
+        </ion-item>
+        <ion-item>
+            <input>
+        </ion-item>
+        <ion-item>
+            <ion-label>ประเภทบ้าน/อาคาร/สิ่งปลูกสร้าง </ion-label>
+            <ion-select [(ngModel)]="os" submitText="OK" cancelText="cancel">
+              <ion-option value="dos">DOS</ion-option>
+              <ion-option value="lunix">Linux</ion-option>
+              <ion-option value="mac7">Mac OS 7</ion-option>
+              <ion-option value="mac8">Mac OS 8</ion-option>
+              <ion-option value="win3.1">Windows 3.1</ion-option>
+              <ion-option value="win95">Windows 95</ion-option>
+              <ion-option value="win98">Windows 98</ion-option>
+            </ion-select>
+          </ion-item>
+          <ion-item>
+            <ion-label>การเข้าพบ /3</ion-label>
+            <ion-select [(ngModel)]="os" submitText="OK" cancelText="cancel">
+              <ion-option value="dos">DOS</ion-option>
+              <ion-option value="lunix">Linux</ion-option>
+              <ion-option value="mac7">Mac OS 7</ion-option>
+              <ion-option value="mac8">Mac OS 8</ion-option>
+              <ion-option value="win3.1">Windows 3.1</ion-option>
+              <ion-option value="win95">Windows 95</ion-option>
+              <ion-option value="win98">Windows 98</ion-option>
+            </ion-select>
+          </ion-item>
+          <ion-item>
+            <h2>ให้ขันทึกข้อความเกี่ยวกับ ปัญหา/อุปสรรค/การนัดหมาย/เหตุผล ที่นับจดไม่ได้</h2>
+          </ion-item>
+          <ion-item>
+              <input>
+          </ion-item>
+      </ion-list>
+  
+      <ion-list *ngSwitchCase="'page2'">
+        <ion-item>
+          <h2>จำนวนครัวเรือน/สถานประกอบการรวมทั้งหมด ในบ้าน/อาคาร/สิ่งปลูกสร้าง</h2>
+        </ion-item>
+        <ion-item>
+          <ion-input placeholder="กรอก"></ion-input>
+        </ion-item>
+      </ion-list>
+  
+      <ion-list *ngSwitchCase="'page3'">
+        <ion-item>
+          <h2>Ruby</h2>
+        </ion-item>
+        <ion-item>
+          <h2>Oscar</h2>
+        </ion-item>
+        <ion-item>
+          <h2>Zoey</h2>
+        </ion-item>
+        <ion-item>
+          <h2>Otto</h2>
+        </ion-item>
+      </ion-list>
+    </div>
+  </ion-content>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
-</ion-content>
+  <!--ion-toolbar no-border-top>
+    <ion-segment [(ngModel)]="sn1">
+      <ion-segment-button value="page1">
+        Puppies
+      </ion-segment-button>
+      <ion-segment-button value="kittens">
+        Kittens
+      </ion-segment-button>
+      <ion-segment-button value="ducklings">
+        Ducklings
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
+
+  <ion-content>
+    <div [ngSwitch]="sn1">
+      <ion-list *ngSwitchCase="page1">
+        <ion-item>
+            <ion-thumbnail item-start>
+            </ion-thumbnail>
+             <h2>Ruby</h2>
+        </ion-item>
+      </ion-list>
+    </div>
+  </ion-content>
+</ion-header-->
+
+<!--ion-content padding>
+  <button ion-button (click)="load()"></button>
+</ion-content-->
+
